--- a/templates/show_post.html
+++ b/templates/show_post.html
@@ -10,14 +10,14 @@
 <div id="post-container" class="container text-center mt-5">
   <div class="row">
     <div class="col">
-      <img id="post-image" class="img-fluid" src="{{ url_for('uploaded_file2', filename=post.img_url) }}" alt="">
+      <img id="post-image" class="img-fluid" src="{{ post.img_url }}" alt="">
     </div>
   </div>
   <div class="container d-flex align-items-center justify-content-center flex-wrap container56">
         <div class="box">
             <div class="body">
                 <div class="imgContainer">
-                    <img src="{{ url_for('uploaded_file', filename=user_id.profile_pic) }}" alt="">
+                    <img src="{{ user_id.profile_pic }}" alt="">
                 </div>
                 <div class="content d-flex flex-column align-items-center justify-content-center">
                     <div>
